--- a/code/analyses/analyses.Rmd
+++ b/code/analyses/analyses.Rmd
@@ -35,6 +35,7 @@ library(emmeans)
 #library(ggstance)
 library(janitor)
 library(boot)
+library(ggpp)
 
 # create necessary directories
 dir.create("../../data/results")
@@ -363,35 +364,57 @@ data_reshaped <- data_drop_decisions_summary |>
 #   kable() |>
 #   kable_styling(bootstrap_options = c("striped", "hover", "condensed"), full_width = FALSE)
 
+```
+
+```{r fig.height=6, fig.width=7}
+
+ggplot(data_reshaped, aes(proportion_match_item_if_dropped, n_participants, group = fct_rev(scale))) +
+  geom_linerange(aes(xmin = proportion_match_item_if_dropped - sqrt(variance_match_item_if_dropped)*1.96, 
+                     xmax = proportion_match_item_if_dropped + sqrt(variance_match_item_if_dropped)*1.96),
+                 position = position_dodge(width = 0.5)) +
+  geom_point(size = 2.5,
+             alpha = 0.5,
+             position = position_dodge(width = 0.5)) +
+  scale_x_continuous(breaks = c(0, .25, .5, .75, 1), 
+                     labels = c("0.00<br/>(Worse)", "0.25", "0.50", "0.75", "1.00<br/>(Better)"),
+                     limits = c(0,1)) +
+  labs(x = "Proportion of cases where<br/>item-dropping recommendation replicated",
+       y = "N participants in each sample") +
+  mdthemes::md_theme_linedraw() +
+  theme(legend.position = "none")
+
+```
+
+```{r fig.height=4, fig.width=5}
 
 # fit model
-fit <-
+fit_1 <-
   lmer(proportion_match_item_if_dropped_logit ~ 1 + n_participants + (1 | scale),
        weights = 1/variance_match_item_if_dropped,
        data = data_reshaped)
 
 # extract re Tau
-results_re_tau <- fit |>
+results_re_tau_1 <- fit_1 |>
   merTools::REsdExtract() |>
   as_tibble(rownames = "scale") |>
   rename(tau = value)
 
 # extract marginal means
-results <-
-  summary(emmeans(fit, ~ n_participants)) |>
+results_1 <-
+  summary(emmeans(fit_1, ~ n_participants)) |>
   dplyr::select(n_participants, estimate = emmean, se = SE, 
                 ci_lower = lower.CL, ci_upper = upper.CL) |>
-  mutate(pi_lower = estimate - (1.96 * sqrt(se^2 + results_re_tau$tau^2)),
-         pi_upper = estimate + (1.96 * sqrt(se^2 + results_re_tau$tau^2))) |>
+  mutate(pi_lower = estimate - (1.96 * sqrt(se^2 + results_re_tau_1$tau^2)),
+         pi_upper = estimate + (1.96 * sqrt(se^2 + results_re_tau_1$tau^2))) |>
   select(-se) |>
   mutate_if(is.numeric, boot::inv.logit)
 
 # plot
 p_meta_1 <-
-  ggplot(results, aes(estimate, fct_rev(n_participants))) +
+  ggplot(results_1, aes(estimate, n_participants)) +
   #geom_linerange(aes(xmin = pi_lower, xmax = pi_upper), size = 0.5, linetype = "dotted") +
   geom_linerange(aes(xmin = ci_lower, xmax = ci_upper)) +
-  geom_point(size = 2.5) +
+  geom_point(size = 2.5, shape = 15) +
   scale_x_continuous(breaks = c(0, .25, .5, .75, 1), 
                      labels = c("0.00<br/>(Worse)", "0.25", "0.50", "0.75", "1.00<br/>(Better)"),
                      limits = c(0,1)) +
@@ -406,58 +429,91 @@ ggsave(filename  = "../plots/meta_analyses_1.pdf",
        device    = "pdf",
        units     = "in",
        width     = 5,
-       height    = 3,
+       height    = 4,
        limitsize = TRUE)
 
-results |>
+results_1 |>
   round_df(2) |>
   kable() |>
   kable_styling(bootstrap_options = c("striped", "hover", "condensed"), full_width = FALSE)
 
-# # tests
-# data_emms <- emmeans(fit, list(pairwise ~ n_participants), adjust = "holm")
-# 
-# summary(data_emms)$`pairwise differences of n_participants` |>
-#   as.data.frame() |>
-#   select(comparison = 1, p.value) |>
-#   mutate(p.value = ifelse(p.value < .001, "< .001", round_half_up(p.value, 3))) |>
-#   kable() |>
-#   kable_styling(bootstrap_options = c("striped", "hover", "condensed"), full_width = FALSE)
+```
+
+```{r fig.height=4, fig.width=5}
+
+ggplot() +
+  #geom_vline(xintercept = 0.50, linetype = "dotted") +
+  geom_linerange(data = results_1, aes(y = estimate, x = n_participants,
+                                       ymin = ci_lower, ymax = ci_upper),
+                 position = ggpp::position_dodge2nudge(x = -0.2, width = 0)) +
+  geom_point(data = results_1, aes(y = estimate, x = n_participants),
+             size = 2.5, shape = 15,
+             position = ggpp::position_dodge2nudge(x = -0.2, width = 0)) +
+  geom_point(data = data_reshaped, aes(y = proportion_match_item_if_dropped, x = n_participants, group = scale),
+             size = 1, shape = 16,
+             alpha = 0.5,
+             position = ggpp::position_dodge2nudge(x = 0, width = 0.2)) +
+  coord_flip() +
+  scale_y_continuous(breaks = c(0, .25, .5, .75, 1), 
+                     labels = c("0.00<br/>(Worse)", "0.25", "0.50", "0.75", "1.00<br/>(Better)"),
+                     limits = c(0,1)) +
+  labs(y = "Proportion of cases where<br/>item-dropping recommendation replicated",
+       x = "N participants in each sample") +
+  mdthemes::md_theme_linedraw() 
 
 ```
 
 ## Proportion of pairs of samples with matching item-drop-or-no-drop recommendation
 
-```{r}
+```{r fig.height=4, fig.width=5}
+
+ggplot(data_reshaped, aes(proportion_match_item_if_dropped_or_none, n_participants, group = fct_rev(scale))) +
+  geom_linerange(aes(xmin = proportion_match_item_if_dropped_or_none - sqrt(variance_match_item_if_dropped_or_none)*1.96, 
+                     xmax = proportion_match_item_if_dropped_or_none + sqrt(variance_match_item_if_dropped_or_none)*1.96),
+                 position = position_dodge(width = 0.5)) +
+  geom_point(size = 2.5,
+             alpha = 0.5,
+             position = position_dodge(width = 0.5)) +
+  scale_x_continuous(breaks = c(0, .25, .5, .75, 1), 
+                     labels = c("0.00<br/>(Worse)", "0.25", "0.50", "0.75", "1.00<br/>(Better)"),
+                     limits = c(0,1)) +
+  labs(x = "Proportion of cases where<br/>item-dropping recommendation replicated",
+       y = "N participants in each sample") +
+  mdthemes::md_theme_linedraw() +
+  theme(legend.position = "none")
+
+```
+
+```{r fig.height=4, fig.width=5}
 
 # fit model
-fit <-
+fit_2 <-
   lmer(proportion_match_item_if_dropped_or_none_logit ~ 1 + n_participants + (1 | scale),
        weights = 1/variance_match_item_if_dropped_or_none,
        data = data_reshaped)
 
 # extract re Tau
-results_re_tau <- fit |>
+results_re_tau_2 <- fit_2 |>
   merTools::REsdExtract() |>
   as_tibble(rownames = "scale") |>
   rename(tau = value)
 
 # extract marginal means
-results <-
-  summary(emmeans(fit, ~ n_participants)) |>
+results_2 <-
+  summary(emmeans(fit_2, ~ n_participants)) |>
   dplyr::select(n_participants, estimate = emmean, se = SE, 
                 ci_lower = lower.CL, ci_upper = upper.CL) |>
-  mutate(pi_lower = estimate - (1.96 * sqrt(se^2 + results_re_tau$tau^2)),
-         pi_upper = estimate + (1.96 * sqrt(se^2 + results_re_tau$tau^2))) |>
+  mutate(pi_lower = estimate - (1.96 * sqrt(se^2 + results_re_tau_2$tau^2)),
+         pi_upper = estimate + (1.96 * sqrt(se^2 + results_re_tau_2$tau^2))) |>
   select(-se) |>
   mutate_if(is.numeric, boot::inv.logit)
 
 # plot
 p_meta_2 <-
-  ggplot(results, aes(estimate, fct_rev(n_participants))) +
+  ggplot(results_2, aes(estimate, n_participants)) +
   #geom_linerange(aes(xmin = pi_lower, xmax = pi_upper), size = 0.5, linetype = "dotted") +
   geom_linerange(aes(xmin = ci_lower, xmax = ci_upper)) +
-  geom_point(size = 2.5) +
+  geom_point(size = 2.5, shape = 15) +
   scale_x_continuous(breaks = c(0, .25, .5, .75, 1), 
                      labels = c("0.00<br/>(Worse)", "0.25", "0.50", "0.75", "1.00<br/>(Better)"),
                      limits = c(0,1)) +
@@ -472,23 +528,37 @@ ggsave(filename  = "../plots/meta_analyses_2.pdf",
        device    = "pdf",
        units     = "in",
        width     = 5,
-       height    = 3,
+       height    = 4,
        limitsize = TRUE)
 
-results |>
+results_2 |>
   round_df(2) |>
   kable() |>
   kable_styling(bootstrap_options = c("striped", "hover", "condensed"), full_width = FALSE)
 
-# # tests
-# data_emms <- emmeans(fit, list(pairwise ~ n_participants), adjust = "holm")
-# 
-# summary(data_emms)$`pairwise differences of n_participants` |>
-#   as.data.frame() |>
-#   select(comparison = 1, p.value) |>
-#   mutate(p.value = ifelse(p.value < .001, "< .001", round_half_up(p.value, 3))) |>
-#   kable() |>
-#   kable_styling(bootstrap_options = c("striped", "hover", "condensed"), full_width = FALSE)
+```
+
+```{r fig.height=4, fig.width=5}
+
+ggplot() +
+  #geom_vline(xintercept = 0.50, linetype = "dotted") +
+  geom_linerange(data = results_2, aes(y = estimate, x = n_participants,
+                                       ymin = ci_lower, ymax = ci_upper),
+                 position = ggpp::position_dodge2nudge(x = -0.2, width = 0)) +
+  geom_point(data = results_2, aes(y = estimate, x = n_participants),
+             size = 2.5, shape = 15,
+             position = ggpp::position_dodge2nudge(x = -0.2, width = 0)) +
+  geom_point(data = data_reshaped, aes(y = proportion_match_item_if_dropped_or_none, x = n_participants, group = scale),
+             size = 1, shape = 16,
+             alpha = 0.5,
+             position = ggpp::position_dodge2nudge(x = 0, width = 0.2)) +
+  coord_flip() +
+  scale_y_continuous(breaks = c(0, .25, .5, .75, 1), 
+                     labels = c("0.00<br/>(Worse)", "0.25", "0.50", "0.75", "1.00<br/>(Better)"),
+                     limits = c(0,1)) +
+  labs(y = "Proportion of cases where<br/>item-dropping recommendation replicated",
+       x = "N participants in each sample") +
+  mdthemes::md_theme_linedraw() 
 
 ```
 
@@ -498,11 +568,11 @@ Only considering cases where an item drop was recommended.
 
 ```{r}
 
-data_drop_decisions_no_data |>
-  group_by(subset_n_per_split) |>
-  summarize(prop_none = mean(item_to_drop_or_none_a == "none"))
+# data_drop_decisions_no_data |>
+#   group_by(subset_n_per_split) |>
+#   summarize(prop_none = mean(item_to_drop_or_none_a == "none"))
 
-data_drop_decisions_summary <- data_drop_decisions_no_data |>
+data_drop_decisions_summary_3 <- data_drop_decisions_no_data |>
   filter(item_to_drop_or_none_a != "none") |>
   group_by(scale, subset_n_per_split) |>
   summarize(
@@ -511,7 +581,7 @@ data_drop_decisions_summary <- data_drop_decisions_no_data |>
     n_replications = max(replication)
   )
 
-data_reshaped <- data_drop_decisions_summary |>
+data_reshaped_3 <- data_drop_decisions_summary_3 |>
   # offset problematic values, logit transform
   mutate(
     proportion_improved = case_when(proportion_improved == 0 ~ 0.001,
@@ -523,35 +593,59 @@ data_reshaped <- data_drop_decisions_summary |>
   # order factors
   mutate(n_participants = fct_reorder(as.factor(subset_n_per_split), as.numeric(subset_n_per_split)))
 
+```
+
+```{r fig.height=4, fig.width=5}
+
+ggplot(data_reshaped_3, aes(proportion_improved, n_participants, group = fct_rev(scale))) +
+  geom_vline(xintercept = 0.50, linetype = "dotted") +
+  geom_linerange(aes(xmin = proportion_improved - sqrt(variance_improved)*1.96, 
+                     xmax = proportion_improved + sqrt(variance_improved)*1.96),
+                 position = position_dodge(width = 0.5)) +
+  geom_point(size = 2.5,
+             alpha = 0.5,
+             position = position_dodge(width = 0.5)) +
+  scale_x_continuous(breaks = c(0, .25, .5, .75, 1), 
+                     labels = c("0.00<br/>(Worse)", "0.25", "0.50", "0.75", "1.00<br/>(Better)"),
+                     limits = c(0,1)) +
+  labs(x = "Proportion of cases where<br/>item-dropping recommendation replicated",
+       y = "N participants in each sample") +
+  mdthemes::md_theme_linedraw() +
+  theme(legend.position = "none")
+
+```
+
+```{r fig.height=4, fig.width=5}
 
 # fit model
-fit <-
+fit_3 <-
   lmer(proportion_improved_logit ~ 1 + n_participants + (1 | scale),
        weights = 1/variance_improved,
-       data = data_reshaped)
+       data = data_reshaped_3)
 
 # extract re Tau
-results_re_tau <- fit |>
+results_re_tau_3 <- fit_3 |>
   merTools::REsdExtract() |>
   as_tibble(rownames = "scale") |>
   rename(tau = value)
 
 # extract marginal means
-results <-
-  summary(emmeans(fit, ~ n_participants)) |>
+results_3 <-
+  summary(emmeans(fit_3, ~ n_participants)) |>
   dplyr::select(n_participants, estimate = emmean, se = SE, 
                 ci_lower = lower.CL, ci_upper = upper.CL) |>
-  mutate(pi_lower = estimate - (1.96 * sqrt(se^2 + results_re_tau$tau^2)),
-         pi_upper = estimate + (1.96 * sqrt(se^2 + results_re_tau$tau^2))) |>
+  mutate(pi_lower = estimate - (1.96 * sqrt(se^2 + results_re_tau_3$tau^2)),
+         pi_upper = estimate + (1.96 * sqrt(se^2 + results_re_tau_3$tau^2))) |>
   select(-se) |>
   mutate_if(is.numeric, boot::inv.logit)
 
 # plot
 p_meta_3 <-
-  ggplot(results, aes(estimate, fct_rev(n_participants))) +
+  ggplot(results_3, aes(estimate, n_participants)) +
+  geom_vline(xintercept = 0.50, linetype = "dotted") +
   #geom_linerange(aes(xmin = pi_lower, xmax = pi_upper), size = 0.5, linetype = "dotted") +
   geom_linerange(aes(xmin = ci_lower, xmax = ci_upper)) +
-  geom_point(size = 2.5) +
+  geom_point(size = 2.5, shape = 15) +
   scale_x_continuous(breaks = c(0, .25, .5, .75, 1), 
                      labels = c("0.00<br/>(Worse)", "0.25", "0.50", "0.75", "1.00<br/>(Better)"),
                      limits = c(0,1)) +
@@ -566,25 +660,41 @@ ggsave(filename  = "../plots/meta_analyses_3.pdf",
        device    = "pdf",
        units     = "in",
        width     = 5,
-       height    = 3,
+       height    = 4,
        limitsize = TRUE)
 
-results |>
+results_3 |>
   round_df(2) |>
   kable() |>
   kable_styling(bootstrap_options = c("striped", "hover", "condensed"), full_width = FALSE)
 
-# # tests
-# data_emms <- emmeans(fit, list(pairwise ~ n_participants), adjust = "holm")
-# 
-# summary(data_emms)$`pairwise differences of n_participants` |>
-#   as.data.frame() |>
-#   select(comparison = 1, p.value) |>
-#   mutate(p.value = ifelse(p.value < .001, "< .001", round_half_up(p.value, 3))) |>
-#   kable() |>
-#   kable_styling(bootstrap_options = c("striped", "hover", "condensed"), full_width = FALSE)
+```
+
+```{r fig.height=4, fig.width=5}
+
+ggplot() +
+  geom_hline(yintercept = 0.50, linetype = "dotted") +
+  geom_linerange(data = results_3, aes(y = estimate, x = n_participants,
+                                       ymin = ci_lower, ymax = ci_upper),
+                 position = ggpp::position_dodge2nudge(x = -0.2, width = 0)) +
+  geom_point(data = results_3, aes(y = estimate, x = n_participants),
+             size = 2.5, shape = 15,
+             position = ggpp::position_dodge2nudge(x = -0.2, width = 0)) +
+  geom_point(data = data_reshaped_3, aes(y = proportion_improved, x = n_participants, group = scale),
+             size = 1, shape = 16,
+             alpha = 0.5,
+             position = ggpp::position_dodge2nudge(x = 0, width = 0.2)) +
+  coord_flip() +
+  scale_y_continuous(breaks = c(0, .25, .5, .75, 1), 
+                     labels = c("0.00<br/>(Worse)", "0.25", "0.50", "0.75", "1.00<br/>(Better)"),
+                     limits = c(0,1)) +
+  labs(y = "Proportion of cases where<br/>item-dropping recommendation replicated",
+       x = "N participants in each sample") +
+  mdthemes::md_theme_linedraw() 
 
 ```
+
+TODO correspondence between meta and original data looks off, also for other plots
 
 # Session info
 
