--- a/code/processing/processing1.Rmd
+++ b/code/processing/processing1.Rmd
@@ -25,7 +25,7 @@ load("~/git/AIID-study/data/processed/AIID_data.RData")
 #load("~/git/AIID-study/data/subsets/AIID_subset_exploratory.RData")
 
 # trim data 
-trimmed_data <- AIID_data %>%
+data_AIID_trimmed <- AIID_data %>%
 #trimmed_data <- AIID_subset_exploratory %>%
 
   # only complete data
@@ -80,8 +80,7 @@ trimmed_data <- AIID_data %>%
                 soc_pe1, soc_pe2, soc_pe3, soc_pe4, soc_pe5, soc_pe6, soc_pe7, soc_pe8, soc_pe9, soc_pe10)
 
 # save to disk
-save(trimmed_data, file = "trimmed_data.RData")
-write_csv(trimmed_data, "trimmed_data.csv")
+write_rds(data_AIID_trimmed, "../../data/intermediary/data_AIID_trimmed.rds", compress = "gz")
 
 ```
 
